infra/k8s/conf-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: conf-app
  labels:
    name: conf-app
