infra/k8s/postgres-depl.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-srv
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgres-pvc
      containers:
        - name: postgres
          image: postgres:11
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: data
          resources:
            limits:
              memory: 512Mi
              cpu: '1'
            requests:
              memory: 64Mi
