infra/k8s/web-client-depl.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-client-srv
spec:
  type: ClusterIP
  selector:
    app: web-client
  ports:
    - name: web-client
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-client
  template:
    metadata:
      labels:
        app: web-client
    spec:
      containers:
        - name: web-client
          image: registry.digitalocean.com/checkmatez/conf-web-client
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
              readOnly: true
      volumes:
        - name: nginx-config
          configMap:
            name: web-client-nginx-config
            items:
              - key: 'nginx.conf'
                path: 'nginx.conf'
